--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,14 @@ RewriteRule ^pembelian$ index.php?page=pembelian [QSA]
 RewriteRule ^pengeluaran$ index.php?page=pengeluaran [QSA]
 RewriteRule ^saldo$ index.php?page=saldo [QSA]
 RewriteRule ^user$ index.php?page=user [QSA]
+RewriteRule ^lapPenerimaan$ index.php?page=lapPenerimaan [QSA]
+RewriteRule ^lapPengeluaran$ index.php?page=lapPengeluaran [QSA]
+RewriteRule ^terimaKeluar$ index.php?page=terimaKeluar [QSA]
+RewriteRule ^spmb$ index.php?page=spmb [QSA]
+RewriteRule ^sppb$ index.php?page=sppb [QSA]
+RewriteRule ^sbpb$ index.php?page=sbpb [QSA]
+RewriteRule ^bast$ index.php?page=bast [QSA]
+RewriteRule ^kartuBarang$ index.php?page=kartuBarang [QSA]
+RewriteRule ^kartuPersediaan$ index.php?page=kartuPersediaan [QSA]
+RewriteRule ^rekapPersediaan$ index.php?page=rekapPersediaan [QSA]
+RewriteRule ^stockOpname$ index.php?page=stockOpname [QSA]
