--- a/.htaccess
+++ b/.htaccess
@@ -18,3 +18,4 @@ RewriteRule ^kartuBarang$ index.php?page=kartuBarang [QSA]
 RewriteRule ^kartuPersediaan$ index.php?page=kartuPersediaan [QSA]
 RewriteRule ^rekapPersediaan$ index.php?page=rekapPersediaan [QSA]
 RewriteRule ^stockOpname$ index.php?page=stockOpname [QSA]
+RewriteRule ^laporan$ index.php?page=laporan [QSA]
