--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 RewriteEngine on
 RewriteRule ^instansi$ index.php?page=instansi [QSA]
 RewriteRule ^pegawai$ index.php?page=pegawai [QSA]
+RewriteRule ^setting$ index.php?page=setting [QSA]
 RewriteRule ^barang$ index.php?page=barang [QSA]
 RewriteRule ^kategori$ index.php?page=kategori [QSA]
 RewriteRule ^pembelian$ index.php?page=pembelian [QSA]
