--- a/.htaccess
+++ b/.htaccess
@@ -20,3 +20,4 @@ RewriteRule ^kartuPersediaan$ index.php?page=kartuPersediaan [QSA]
 RewriteRule ^rekapPersediaan$ index.php?page=rekapPersediaan [QSA]
 RewriteRule ^stockOpname$ index.php?page=stockOpname [QSA]
 RewriteRule ^laporan$ index.php?page=laporan [QSA]
+RewriteRule ^sisa$ index.php?page=sisa [QSA]
